# steed

./: CMakeLists.txt  README.md  setup.py
CMakeModules/: FindLZ4.cmake
conf/: steed.conf
doxygen/: Doxyfile
examples/: Makefile  main.cpp
examples/json/: try.json
include/: steed.h
pysteed/: pysteed_demo.py  regen.sh  steed.py  steed_demo.py
src/: CMakeLists.txt
src/steed/: CMakeLists.txt  pysteed.cpp  steed.cpp
src/steed/assemble/: AssembleColumn.h  CMakeLists.txt  ColumnAssembler.cpp  ColumnAssembler.h  ColumnExpression.h  ColumnExpressionParser.cpp  ColumnExpressionParser.h  FSMTable.cpp  FSMTable.h  QueryPathes.h  RecordNestedAssembler.cpp  RecordNestedAssembler.h  RecordOutput.cpp  RecordOutput.h
src/steed/base/: BinaryValueArray.h  BinaryValueArray_inline.h  Block.cpp  Block.h  CMakeLists.txt  Compressor.h  CompressorFactory.h  CompressorLz4.h  CompressorNone.h  DataType.cpp  DataType.h  DataType_inline.h  RepetitionType.h  Row.h  StoragePath.h
src/steed/conf/: CMakeLists.txt  Config.cpp  Config.h
src/steed/parse/: CMakeLists.txt  CollectionWriter.cpp  CollectionWriter.h  CollectionWriter_inline.h  ColumnItemGenerator.cpp  ColumnItemGenerator.h  ColumnItemGenerator_inline.h  ColumnParser.cpp  ColumnParser.h  ColumnParser_inline.h  ColumnTextBuffer.h  FieldCounter.h  JSONBinField.h  JSONBinTree.h  JSONRecordBuffer.cpp  JSONRecordBuffer.h  JSONRecordNaiveParser.cpp  JSONRecordNaiveParser.h  JSONRecordParser.cpp  JSONRecordParser.h  JSONRecordReader.h  JSONType.h  JSONTypeMapper.cpp  JSONTypeMapper.h  TreeCounter.h
src/steed/schema/: CMakeLists.txt  SchemaNode.h  SchemaNode_inline.h  SchemaPath.h  SchemaSignature.h  SchemaTree.cpp  SchemaTree.h  SchemaTreeMap.cpp  SchemaTreeMap.h  SchemaTreePrinter.cpp  SchemaTreePrinter.h  SchemaTree_inline.h
src/steed/store/: CAB.cpp  CAB.h  CABAppender.cpp  CABAppender.h  CABInfo.h  CABInfo_inline.h  CABItemInfo.h  CABLayouter.cpp  CABLayouter.h  CABLayouter_inline.h  CABMeta.h  CABOperator.h  CABReader.cpp  CABReader.h  CABReader_inline.h  CABWriter.cpp  CABWriter.h  CABWriter_inline.h  CAB_inline.h  CMakeLists.txt  ColumnItem.h  ColumnItemArray.h  ColumnItemArray_inline.h  ColumnReader.h  ColumnReader_inline.h  ColumnValueInfo.h  ColumnWriter.h  ColumnWriter_inline.h  RecordBuilder.cpp  RecordBuilder.h  RecordBuilder_inline.h  RowArrayOperator.h  RowInfo.h  RowObjectOperator.h  RowStruct.h  RowStructBuilder.h  RowStructBuilder_inline.h  RowStructOperator.h  RowStruct_inline.h
src/steed/unittest/: Assemble.cpp  Base.cpp  CMakeLists.txt  Config.cpp  Parse.cpp  Schema.cpp  Store.cpp  Util.cpp  main.cpp
src/steed/util/: Allocator.cpp  Allocator.h  BitMap.h  BitVector.h  BitVector_inline.h  BoolVector.cpp  BoolVector.h  BoolVector_inline.h  Buffer.cpp  Buffer.h  Buffer_inline.h  CMakeLists.txt  Container.h  Container_inline.h  DebugInfo.cpp  DebugInfo.h  FileHandler.cpp  FileHandler.h  FileIO.cpp  FileIO.h  InStreamSeeker.h  RandomGenerator.h  RandomValues.h  SymbolMap.h  Utility.cpp  Utility.h
tools/: CMakeLists.txt  Schema.cpp
